versions/v0.11.x/service/python-sdk/encrypted-index/upsert.mdx
---
title: "Upsert"
mode: "wide"
---

Adds new vectors to the index or updates existing ones. Supports both dictionary format and separate arrays for IDs and vectors.

```python
# Option 1: Dictionary format
index.upsert(items)

# Option 2: Separate arrays  
index.upsert(ids, vectors)
```

### Parameters

#### Option 1: Dictionary Format
| Parameter | Type | Default | Description |
|-----------|------|---------|-------------|
| `items` | `List[Dict]` | - | List of dictionaries containing vector data |

Where each dictionary can contain:

```python
[
  {
    "id": str, # Unique identifier for the vector
    "vector": List[float], # The vector data
    "contents": str, # Optional text content associated with the vector
    "metadata": Dict # Optional key-value pairs for filtering and retrieval
  },
  ...
]
```

#### Option 2: Separate Arrays

| Parameter | Type | Default | Description |
|-----------|------|---------|-------------|
| `ids` | `List[str]` | - | List of unique vector identifiers |
| `vectors` | `List[List[float]]` or `np.ndarray` | - | Vector data as 2D array |

### Returns

`None`

### Example Usage

#### Dictionary Format

```python
# Basic vector upsert
items = [
    {
        'id': 'doc1',
        'vector': [0.1, 0.2, 0.3, 0.4]
    },
    {
        'id': 'doc2', 
        'vector': [0.5, 0.6, 0.7, 0.8]
    }
]

index.upsert(items)
```

#### Separate Arrays

```python
import numpy as np

# Using separate arrays
ids = ['vec1', 'vec2', 'vec3']
vectors = np.random.rand(3, 128).astype(np.float32)

index.upsert(ids, vectors)
```